[package]
name = "my-hours"
version = "0.1.3"
edition = "2021"
authors = ["Joni Hasanen <joni@pieceofcode.com>"]
license = "MIT"
description = "Command line app to combine tracked hours in tracking services and provide easy way to see if the monthly goal will be met or not."
homepage = "https://github.com/hasanen/my-hours"
repository = "https://github.com/hasanen/my-hours"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
directories-next = "2.0.0"
read_input = "0.8.6"
toml = "0.7.6"
serde = { version = "1.0.151", features = ["derive"] }
reqwest = { version = "0.11.19", features = ["json"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"] }
sha2 = "0.10.7"
digest = "0.10.7"
comfy-table = "7.0.1"
