[package]
name = "my-hours"
version = "0.1.4"
edition = "2021"
authors = ["Joni Hasanen <joni@pieceofcode.com>"]
license = "MIT"
description = "Command line app to combine tracked hours in tracking services and provide easy way to see if the monthly goal will be met or not."
homepage = "https://github.com/hasanen/my-hours"
repository = "https://github.com/hasanen/my-hours"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
directories-next = "2.0.0"
read_input = "0.8.6"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4.40", features = ["serde"] }
sha2 = "0.10.8"
digest = "0.10.7"
comfy-table = "7.1.4"
