[package]
name = "my-hours"
version = "0.1.4"
edition = "2021"
authors = ["Joni Hasanen <joni@pieceofcode.com>"]
license = "MIT"
description = "Command line app to combine tracked hours in tracking services and provide easy way to see if the monthly goal will be met or not."
homepage = "https://github.com/hasanen/my-hours"
repository = "https://github.com/hasanen/my-hours"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
directories-next = "2.0.0"
read_input = "0.8.6"
toml = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
sha2 = "0.10.9"
digest = "0.10.7"
comfy-table = "7.2.1"
